--- a/templates/index.md.tmpl
+++ b/templates/index.md.tmpl
@@ -22,7 +22,7 @@ The provider gives the ability to
 terraform {
   required_providers {
     cvprovider = {
-      source = "arista.com/dev/cloudvision"
+      source = "aristanetworks/cloudvision"
     }
   }
 }
